# pulp

./: .gitignore  .iwyu-mappings.imp  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEPENDENCIES.md  NOTICE.md  README.md  VISION.md  codecov.yml  compat.json  mkdocs.yml  setup.sh  validate-build.ps1  validate-build.sh
bindings/python/: CMakeLists.txt  bindings.cpp
core/audio/: CMakeLists.txt
core/dawproject/: CMakeLists.txt
core/events/: CMakeLists.txt
core/gpu_audio/: CMakeLists.txt
core/playback/: CMakeLists.txt  PulpPlaybackSources.cmake
core/sequence/: CMakeLists.txt
core/timebase/: CMakeLists.txt
core/timeline/: CMakeLists.txt  PulpTimelineSources.cmake
examples/: CMakeLists.txt
examples/PulpDrums/: CMakeLists.txt  pulp_drums.hpp  test_pulp_drums.cpp
examples/PulpSampler/: CMakeLists.txt  pulp_sampler.cpp  pulp_sampler.hpp  pulp_sampler_render.cpp  pulp_sampler_sources.cmake  sampler_api.hpp  sampler_components.hpp  sampler_heritage_runtime.hpp  sampler_heritage_state.hpp  sampler_mip_pyramid.hpp  sampler_source_publication.hpp  sampler_stream_mip_sidecar.hpp  sampler_streaming_runtime.cpp  sampler_streaming_runtime.hpp  sampler_streaming_service.cpp  test_pulp_sampler.cpp  test_pulp_sampler_contract.cpp  test_pulp_sampler_heritage.cpp  test_pulp_sampler_heritage_render_clock.cpp  test_pulp_sampler_heritage_state_failure_rt.cpp  test_pulp_sampler_heritage_stream_domain.cpp  test_pulp_sampler_heritage_support.hpp  test_pulp_sampler_mip_runtime.cpp  test_pulp_sampler_mip_sidecar.cpp  test_pulp_sampler_resident_rt.cpp  test_pulp_sampler_streaming.cpp  test_pulp_sampler_streaming_admission_rt.cpp  test_pulp_sampler_support.hpp  test_sampler_api.cpp  test_sampler_cli_sidecar_probe.cpp
examples/PulpSequence/: CMakeLists.txt  au_v3_entry.cpp  clap_entry.cpp  sequence_demo_processor.cpp  sequence_demo_processor.hpp  vst3_entry.cpp
examples/PulpSynth/: CMakeLists.txt  pulp_synth.hpp
examples/PulpTempoSampler/: CMakeLists.txt  au_v2_entry.cpp  main.cpp  pulp_tempo_sampler.hpp  screenshot.cpp  test_pulp_tempo_sampler.cpp  vst3_entry.cpp
examples/StepSequencer/: CMakeLists.txt  clap_entry.cpp  step_sequencer_processor.hpp
examples/android-synth/: README.md
examples/ara-pitch-tracker/: CMakeLists.txt  README.md  clap_entry.cpp
examples/bitches-brew/: CMakeLists.txt  HARDWARE.md  README.md
examples/bowed-string/: CMakeLists.txt  au_v2_entry.cpp  bowed_string.hpp  bowed_string_instrument.hpp  clap_entry.cpp  vst3_entry.cpp
examples/combined-bundle-demo/: CMakeLists.txt  bundle_enum_test.cpp  bundle_plugins.hpp  clap_bundle_entry.cpp  vst3_bundle_entry.cpp
examples/component-shots/: main.cpp
examples/design-import-standalone/: main.cpp
examples/design-tool/: design-tool-chat.js  design-tool-palette.js  design-tool-popup.js  design-tool-preview.js  design-tool-toolbar.js  design-tool.js  main.cpp
examples/elysium-rust-ui-baseline/: CMakeLists.txt  PulpElysiumRuifRustProvider_clap_entry.cpp  PulpElysiumRuifRustProvider_vst3_entry.cpp  elysium_ruif_processor.cpp  elysium_ruif_processor.hpp  elysium_ruif_rust_processor.cpp  elysium_rust_provider_bridge.cpp  elysium_rust_provider_bridge.hpp  main.cpp  ruif_plugin_capture_mac.mm  rust_provider_main.cpp
examples/elysium-standalone/: CMakeLists.txt  main.cpp
examples/eq-curve-demo/: CMakeLists.txt  au_v2_entry.cpp  clap_entry.cpp  eq_curve_demo.hpp  eq_curve_editor.hpp  main.cpp  test_eq_curve_demo.cpp  vst3_entry.cpp
examples/gesture-touch-demo/: CMakeLists.txt  main.cpp
examples/gong/: CMakeLists.txt  au_v2_entry.cpp  clap_entry.cpp  gong_instrument.hpp  gong_plate.hpp  gong_voice.hpp  vst3_entry.cpp
examples/gpu-demo/: main.cpp
examples/gpu-nam/: CMakeLists.txt  README.md  gpu_nam.hpp  gpu_nam_cloud_node.hpp  gpu_nam_processor.hpp  gpu_nam_ui.hpp  gpu_nam_view.cpp  keras_runtime.hpp  nam_a2.hpp  nam_linear.hpp  nam_lstm.hpp  nam_model.hpp  nam_runtime.hpp  package.sh  screenshot.cpp  test_gpu_nam_plugin.cpp  test_keras_runtime.cpp  test_nam_a2.cpp  test_nam_linear.cpp  test_nam_lstm.cpp  test_nam_model.cpp  wavenet_check.cpp
examples/host-bench-plugin/: CMakeLists.txt  Info.plist.au  Info.plist.vst3  au_register.cpp  au_v2_entry.cpp  bench_logger.hpp  clap_entry.cpp  host_bench.hpp  main.cpp  test_host_bench.cpp  vst3_entry.cpp
examples/hot-reload-demo/: CMakeLists.txt  au_v2_entry.cpp  vst3_entry.cpp
examples/hot-reload-morph/: CMakeLists.txt  README.md  au_v2_entry.cpp  capture_morph.cpp  clap_entry.cpp  logic_morph.cpp  morph_dsp.hpp  vst3_entry.cpp
examples/hot-reload-synth/: CMakeLists.txt  au_v2_entry.cpp  clap_entry.cpp  hot_reload_synth_shell.hpp  logic_synth.cpp  main.cpp  package_m2.sh  rebuild_logic.sh  synth_voices.hpp  vst3_entry.cpp
examples/ink-signal-sampler/: CMakeLists.txt  main.cpp
examples/ink-signal-showcase/: CMakeLists.txt  main.cpp
examples/ios-auv3-synth/: README.md  (+1 more)
ship/: CMakeLists.txt
test/: CMakeLists.txt  au_bundle_lifecycle.cpp  canvas_pixel_sample.hpp  clap_bundle_lifecycle.cpp  denormal_null_harness.hpp  denormal_null_launcher.cpp  denormal_null_reference.cpp  denormal_null_reference.hpp  denormal_null_refgen.cpp  linux_posix_acl_test_helpers.hpp  mac_window_harness.hpp  mac_window_harness.mm  mcp_server_test_support.hpp  osc_render_wav.cpp  playback_audio_renderer_test_support.hpp  reload_test_support.hpp  sample_heritage_adaptive_calibration_render.cpp  sample_heritage_c1_c5_calibration_render.cpp  sample_heritage_cyclic_calibration_render.cpp  sample_heritage_render_wav.cpp  sample_interpolation_benchmark.cpp  sample_interpolation_render_wav.cpp  test_aax_editor.cpp  test_aax_effect_gui.cpp  test_aax_entry_registration.cpp  test_aax_model.cpp  test_aax_rt_safety.cpp  test_ab_compare.cpp  test_abstract_fifo.cpp  test_accessibility_provider.cpp  test_accessibility_tree.cpp  test_activity_channel.cpp  test_adapter_audio_parity.cpp  test_adapter_boundary_parity.cpp  test_agent_request_queue.cpp  test_alsa_input.cpp  test_analytics.cpp  test_analyzer_provider.cpp  test_android_package.cpp  test_animation.cpp  (+909 more)
(+4480 files in other folders)
