# Pulp test suite -- Catch2
#
# Keep this file as shared setup plus ordered owner includes only.
# Add new test registrations to the matching test/cmake/*_tests.cmake file.

include(${CMAKE_SOURCE_DIR}/tools/cmake/PulpTestSuite.cmake)
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/dsp_rt_contract_tests.cmake")
find_package(Python3 COMPONENTS Interpreter QUIET)
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/quality_tests.cmake")
if(Python3_Interpreter_FOUND)
    include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/refactor_baseline_tests.cmake")
endif()
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_smoke_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/cli_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/content_workflow_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/cli_package_registry_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/package_analyzer_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/cli_import_tool_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/native_component_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/format_reload_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/view_host_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/canvas_text_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/image_codec_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/core_runtime_canvas_signal_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/timeline_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/sampler_runtime_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/core_audio_platform_format_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/scene3d_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/render_gpu_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/motion_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/script_canvas_render_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/late_core_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/view_widget_bridge_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/design_import_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/app_audio_host_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/design_system_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/benchmark_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/mac_platform_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/super_convolver_dsp_tests.cmake")
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/gpu_audio_web_tests.cmake")
